--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_DATABASE=files_manager
 REDIS_URL=redis://localhost:6379
 PORT=5000
 MONGO_URI=mongodb://localhost:27017
+FOLDER_PATH=/tmp/files_manager
