--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ioredis": "^5.4.1",
     "mime-types": "^2.1.27",
     "mongodb": "^3.7.4",
+    "mongoose": "^8.9.0",
+    "multer": "^1.4.5-lts.1",
     "redis": "^2.8.0",
     "sha1": "^1.1.1",
     "uuid": "^8.3.2"
